--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section class="comming-soon">
       <div>
-        <h2>Maradona Day</h2>
+        <h2>Cuando Juega Boquita</h2>
         <div class="countdown">
           <div class="container-day">
             <div class="day">Time</div>
@@ -30,7 +30,8 @@
           </div>
         </div>
       </div>
-      <img class="waiting" src="maradona.jpeg" alt="image-fantastic" />
+      
+    <!--img class="waiting" src="maradona.jpeg" alt="image-fantastic" /-->
     </section>
     <script src="app.js"></script>
   </body>
