Boke update Lali

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <div class="countdown">
           <div class="container-day">
             <div class="day">Time</div>
-            <h3>Day</h3>
+            <h3>Dias</h3>
           </div>
           <div class="container-hour">
             <div class="hour">Time</div>
-            <h3>Hour</h3>
+            <h3>Horas</h3>
           </div>
           <div class="cointainer-minute">
             <div class="minute">Time</div>
-            <h3>Minute</h3>
+            <h3>Minutos</h3>
           </div>
           <div class="container-seconds">
             <div class="second">Time</div>
-            <h3>Seconds</h3>
+            <h3>Segundos</h3>
           </div>
         </div>
       </div>
