--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <section class="comming-soon">
       <div>
+        <div class="mark">
+            <p>By Tejon-Tech</p>
+        </div>
         <h2>Cuando Juega Boquita</h2>
         <div class="countdown">
           <div class="container-day">
