--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="comming-soon">
       <div>
         <div class="mark">
-            <p>By Tejon-Tech</p>
+            <p class="mark-p">By Tejon-Tech</p>
         </div>
         <h2>Cuando Juega Boquita</h2>
         <div class="countdown">
