Boke update Lali 6.3

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="mark">
-      <p class="mark-p">By Tejon-Tech</p>
+      <p class="mark-p">By Tejon-Tech 🦡</p>
   </div>
     <section class="comming-soon">
       <div>
