--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="mark">
-      <p class="mark-p">By Tejon-Tech 🦡</p>
+      <a class="mark-p" href="https://www.linkedin.com/in/juanvillalba5/">By Tejon-Tech 🦡❤️​</a>
   </div>
     <section class="comming-soon">
       <div>
