--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="mark">
-      <a class="mark-p" href="https://www.linkedin.com/in/juanvillalba5/">By Tejon 🦡❤️</a>
+      <a class="mark-p" href="https://twitter.com/TejonusTejonus">By Tejon 🦡❤️</a>
   </div>
     <section class="comming-soon">
       <div>
