update for the world 3

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <h2>Cuando Juega Boquita</h2>
         <div class="countdown">
           <div class="container-day">
-            <div class="day">Time</div>
+            <div class="day">B</div>
             <h3>Dias</h3>
           </div>
           <div class="container-hour">
-            <div class="hour">Time</div>
+            <div class="hour">O</div>
             <h3>Horas</h3>
           </div>
           <div class="cointainer-minute">
-            <div class="minute">Time</div>
+            <div class="minute">C</div>
             <h3>Minutos</h3>
           </div>
           <div class="container-seconds">
-            <div class="second">Time</div>
+            <div class="second">A</div>
             <h3>Segundos</h3>
           </div>
         </div>
