--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="icono.jpeg" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cuando Juega Boquita</title>
     <link rel="stylesheet" href="style.css" />
