--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <h3>Segundos</h3>
           </div>
         </div>
+        <div class="container-rival">
+          <span class="tournament">Competencia: Torneo Local</span>
+          <span class="rival">Rival: Belgrano (CBA)</span>
+        </div>
       </div>
       
     </section>
