--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Competencia: Torneo Local</span>
-          <span class="rival">Rival: Belgrano (CBA)</span>
+          <span class="tournament">Torneo Local</span>
+          <span class="rival">Vs Belgrano (CBA)</span>
         </div>
       </div>
       
