--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="icono2.ico" />
+    <link rel="apple-touch-icon" sizes="114x114" href="icono2.png" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cuando Juega Boquita</title>
     <link rel="stylesheet" href="style.css" />
