--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Copa Argentina</span>
-          <span class="rival">Vs Talleres (CBA)</span>
+          <span class="tournament">Torneo Local</span>
+          <span class="rival">Vs Union (Sta Fe)</span>
         </div>
       </div>
       
