--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="container-rival">
           <span class="tournament">Torneo Local</span>
-          <span class="rival">Vs Union (Sta Fe)</span>
+          <span class="rival">Vs Racing</span>
         </div>
       </div>
       
