--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Torneo Local</span>
-          <span class="rival">Vs Estudiantes</span>
+          <span class="tournament">Copa Libertadores
+          </span>
+          <span class="rival">Vs Fluminense (Bra)</span>
         </div>
       </div>
       
