--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Copa Libertadores
+          <span class="tournament">Torneo Local
           </span>
-          <span class="rival">Vs Fluminense (Bra)</span>
+          <span class="rival">Vs San Lorenzo (Barrio Desconocido)</span>
         </div>
       </div>
       
