--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container-rival">
           <span class="tournament">Torneo Local
           </span>
-          <span class="rival">Vs San Lorenzo (Barrio Desconocido)</span>
+          <span class="rival">Vs Newell's (Rosario)</span>
         </div>
       </div>
       
