--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Torneo Local
+          <span class="tournament">Copa Argentina
           </span>
-          <span class="rival">Vs Newell's (Rosario)</span>
+          <span class="rival">Vs Estudiantes</span>
+          <span class="rival">HORARIO NO DEFINIDO</span>
         </div>
       </div>
       
