--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Torneo Local
+          <span class="tournament">De momento no hay horarios de la proxima temporada
           </span>
-          <span class="rival">Vs Godoy Cruz (Mdz)</span>
+          <span class="rival"></span>
         </div>
       </div>
       
