new season boca bocaa bocaaa 2

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">De momento no hay horarios de la proxima temporada
+          <span class="tournament">Liga Local
           </span>
-          <span class="rival"></span>
+          <span class="rival">Platense</span>
         </div>
       </div>
       
