--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container-rival">
           <span class="tournament">Liga Local
           </span>
-          <span class="rival">vs Estudiantes (La Plata)</span>
+          <span class="rival">vs Rosario Central </span>
         </div>
       </div>
       
