--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Liga Local
+          <span class="tournament">Copa Argentina
           </span>
-          <span class="rival">vs Rosario Central </span>
+          <span class="rival">vs Central Norte (Salta) </span>
         </div>
       </div>
       
