--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Liga Local
+          <span class="tournament">Sudamericana
           </span>
-          <span class="rival">vs Newell's</span>
+          <span class="rival">vs Trinidense (PAR)</span>
         </div>
       </div>
       
