--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Sudamericana
+          <span class="tournament">Torneo Local
           </span>
-          <span class="rival">vs Trinidense (PAR)</span>
+          <span class="rival">vs Godoy Cruz (MZA)</span>
         </div>
       </div>
       
