torneo local vs river

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Torneo Local
+          <span class="tournament">Copa de la Liga - 4tos
           </span>
-          <span class="rival">vs Godoy Cruz (MZA)</span>
+          <span class="rival">vs River</span>
         </div>
       </div>
       
