torneo local vs fortaleza

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Copa de la Liga - 4tos
+          <span class="tournament">Copa Sudamericana
           </span>
-          <span class="rival">vs River</span>
+          <span class="rival">vs Fortaleza (Bra)</span>
         </div>
       </div>
       
