--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Copa Sudamericana
+          <span class="tournament">Copa de la Liga
           </span>
-          <span class="rival">vs Fortaleza (Bra)</span>
+          <span class="rival">vs Estudiantes</span>
         </div>
       </div>
       
