--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Liga Local
+          <span class="tournament">Copa Sudamericana
           </span>
-          <span class="rival">vs Atletico de Tucuman</span>
+          <span class="rival">vs Fortaleza</span>
         </div>
       </div>
       
