--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Copa Sudamericana
+          <span class="tournament">Liga Profesional
           </span>
-          <span class="rival">vs Fortaleza</span>
+          <span class="rival">vs Central Cordoba (Sgo del Estero)</span>
         </div>
       </div>
       
