--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container-rival">
           <span class="tournament">Liga Profesional
           </span>
-          <span class="rival">vs Central Cordoba (Sgo del Estero)</span>
+          <span class="rival">vs Talleres (Cordoba)</span>
         </div>
       </div>
       
