--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Sudamericana
+          <span class="tournament">Liga Profesional de Argentina
           </span>
-          <span class="rival">vs Nacional Potosi (BOL)</span>
+          <span class="rival">vs Platense</span>
         </div>
       </div>
       
