--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Liga Profesional de Argentina
+          <span class="tournament">Copa Argentina
           </span>
-          <span class="rival">vs Velez</span>
+          <span class="rival">vs Almirante Brown</span>
         </div>
       </div>
       
