torneo local fecha 6

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Copa Sudamericana
+          <span class="tournament">Torneo Local
           </span>
-          <span class="rival">vs Independiente del Valle</span>
+          <span class="rival">vs Defensa y Justicia</span>
         </div>
       </div>
       
