vs ind del valle vuelta

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Torneo Local
+          <span class="tournament"> Copa Sudamericana
           </span>
-          <span class="rival">vs Defensa y Justicia</span>
+          <span class="rival">vs Independiente del Valle (ECU)</span>
         </div>
       </div>
       
