--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament"> Copa Sudamericana
+          <span class="tournament"> Liga Local
           </span>
-          <span class="rival">vs Independiente del Valle (ECU)</span>
+          <span class="rival">vs Instituto (CBA)</span>
         </div>
       </div>
       
