--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container-rival">
           <span class="tournament"> Liga Local
           </span>
-          <span class="rival">vs Barracas Central </span>
+          <span class="rival">vs Independiente Rivadavia (MDZ) </span>
         </div>
       </div>
       
