vs cruzeiro vuelta

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament"> Liga Local
+          <span class="tournament"> Copa Sudamericana
           </span>
-          <span class="rival">vs San Lorenzo </span>
+          <span class="rival">vs Cruzeiro (Bra)</span>
         </div>
       </div>
       
