--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament"> Liga Local
+          <span class="tournament"> Copa Argentina
           </span>
-          <span class="rival">vs Estudiantes</span>
+          <span class="rival">vs Talleres (CBA)</span>
+          <span class="rival">Horario a Confirmar</span>
         </div>
       </div>
       
