--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament"> Copa Argentina
+          <span class="tournament"> Liga Local
           </span>
-          <span class="rival">vs Talleres (CBA)</span>
+          <span class="rival">vs Racing</span>
           
         </div>
       </div>
