vs gimnasia copa argentina

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament"> Liga Local
+          <span class="tournament"> Copa Argentina
           </span>
-          <span class="rival">vs Tigre</span>
+          <span class="rival">vs Gimnasia</span>
           
         </div>
       </div>
