--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container-rival">
           <span class="tournament">Torneo Local
           </span>
-          <span class="rival">vs Gimnasia</span>
+          <span class="rival">vs Newell's Old Boys</span>
           
         </div>
       </div>
