--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Torneo Local
+          <span class="tournament">Mundial de Clubes
           </span>
-          <span class="rival">vs Independiente</span>
+          <span class="rival">vs Benfica (POR)</span>
           
         </div>
       </div>
