--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Mundial de Clubes
+          <span class="tournament">Amistoso
           </span>
-          <span class="rival">vs Benfica (POR)</span>
+          <span class="rival">vs Esporte Clube Juventude (BRA)
+            <img src='EC_Juventude.svg' jsaction="" class="logovs"  alt="Esporte Clube Juventude" aria-hidden="false">
+          </span>
           
         </div>
       </div>
