--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <span class="tournament">Amistoso
           </span>
           <span class="rival">vs Esporte Clube Juventude (BRA)
-            <img src='EC_Juventude.svg.png' jsaction="" class="logovs"  alt="Esporte Clube Juventude" aria-hidden="false">
+            <img src='EC_Juventude.svg.png' class="logovs">
           </span>
           
         </div>
