--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="container-rival">
           <span class="tournament">Amistoso
           </span>
-          <span class="rival">vs 
-            <img src='EC_Juventude.svg.png' class="logovs">Esporte Clube Juventude (BRA)
+          <span class="rival">vs Esporte Clube Juventude 
+            <img src='EC_Juventude.svg.png' class="logovs">(BRA)
           </span>
           
         </div>
