--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon"  href="icono2.ico" />
-    <link rel="apple-touch-icon" sizes="57x57" href="icono2.png" />
+    <link rel="icon"  href="icon.ico" />
+    <link rel="apple-touch-icon" sizes="57x57" href="icon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cuando Juega Boquita</title>
     <link rel="stylesheet" href="style.css" />
