--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="container-rival">
-          <span class="tournament">Amistoso
+          <span class="tournament">Copa Argentina
           </span>
           <span class="rival">vs Club Deportivo Argentino
             <img src='EscudoArgMonteMaiz.png' class="logovs">(CBA)
