vs Copa Argentina v1.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon"  href="icon.ico" />
-    <link rel="apple-touch-icon" sizes="57x57" href="icon.ico" />
+    <link rel="icon" href="icon.ico" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/icon.ico" />
+    <link rel="icon" type="img/png" sizes="16x16" href="/Countdown2/images/icon.ico" />
+    <link rel="icon" type="img/png" sizes="32x32" href="/Countdown2/images/icon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cuando Juega Boquita</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="mark">
-      <a class="mark-p" href="https://twitter.com/TejonusTejonus">By Tejon 🦡❤️</a>
-  </div>
+      <a class="mark-p" href="https://twitter.com/TejonusTejonus"
+        >By Tejon 🦡❤️</a
+      >
+    </div>
     <section class="comming-soon">
       <div>
         <h2>Cuando Juega Boquita</h2>
@@ -34,16 +38,22 @@
             <h3>Segundos</h3>
           </div>
         </div>
-        <div class="container-rival">
-          <span class="tournament">Copa Argentina
-          </span>
-          <span class="rival">vs Club Deportivo Argentino
-            <img src='EscudoArgMonteMaiz.png' class="logovs">(CBA)
-          </span>
-          
+        <div class="container-data">
+          <div class="container-date">
+            <span class="match-date">Fecha </span>
+          </br>
+            <span class="data-date"> Miercoles 22-01-2025 - 21:10 P.M. </span>
+          </div>
+          <div class="container-rival">
+            <span class="tournament">Copa Argentina </span>
+          </br>
+            <span class="rival"
+              >vs Club Deportivo Argentino
+              <img src="EscudoArgMonteMaiz.png" class="logovs" />(CBA)
+            </span>
+          </div>
         </div>
       </div>
-      
     </section>
     <script src="app.js"></script>
   </body>
