vs Copa Argentina v1.5.7

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           </div>
         </div>
         <div class="container-data">
-          <div class="container-date">
+       <!-- <div class="container-date">
             <span class="match-date">Fecha </span>
           </br>
             <span class="data-date"> Miercoles 22-01-2025 - 21:10 P.M. </span>
-          </div>
+          </div> -->
           <div class="container-rival">
             <span class="tournament">Copa Argentina </span>
           </br>
