vs Argentinos jrs v1.1

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </div>
         <div class="container-data">
           <div class="container-rival">
-            <span class="tournament">Copa Argentina </span>
+            <span class="tournament">Liga Argentina </span>
             <span class="rival"
-              >vs Club Deportivo Argentino
-              <img src="EscudoArgMonteMaiz.png" class="logovs" />(CBA)
+              >vs Argentinos Jrs 
+              <img src="./images/Asociacion_Atletica_Argentinos_Juniors.svg.png" class="logovs" />
             </span>
           </div>
         </div>
