vs Argentinos jrs v1.1.2

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="icon.ico" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/icon.ico" />
+   <!-- <link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/icon.ico" />
     <link rel="icon" type="img/png" sizes="16x16" href="/Countdown2/images/icon.ico" />
-    <link rel="icon" type="img/png" sizes="32x32" href="/Countdown2/images/icon.ico" />
+    <link rel="icon" type="img/png" sizes="32x32" href="/Countdown2/images/icon.ico" />-->
+    <!-- Favicon for Browsers -->
+<link rel="icon" href="/Countdown2/images/favicon.ico" sizes="any" type="image/x-icon" />
+
+<!-- Apple Touch Icon for iOS Devices -->
+<link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/apple-icon-57x57.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="/Countdown2/images/apple-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="/Countdown2/images/apple-icon-114x114.png" />
+<link rel="apple-touch-icon" sizes="120x120" href="/Countdown2/images/apple-icon-120x120.png" />
+<link rel="apple-touch-icon" sizes="152x152" href="/Countdown2/images/apple-icon-152x152.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="/Countdown2/images/apple-icon-180x180.png" />
+
+<!-- PNG Icons for Browsers -->
+<link rel="icon" type="image/png" sizes="16x16" href="./images/icon_16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="./images/icon_32x32.png" />
+<link rel="icon" type="image/png" sizes="96x96" href="./images/icon_96x96.png" />
+<link rel="icon" type="image/png" sizes="192x192" href="./images/icon_192x192.png" />
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cuando Juega Boquita</title>
     <link rel="stylesheet" href="style.css" />
