--- a/Cuando Juega Boquita.html
+++ b/Cuando Juega Boquita.html
@@ -39,8 +39,8 @@
         <div class="container-data">
           <div class="container-rival">
             <span class="tournament">Liga Argentina </span>
-            <span class="rival">vs Argentinos Jrs
-              <img src="Cuando%20Juega%20Boquita_archivos/Asociacion_Atletica_Argentinos_Juniors.svg.png" class="logovs">
+            <span class="rival">vs Union
+              <img src="./images/union.png" class="logovs">
             </span>
           </div>
         </div>
