--- a/Cuando Juega Boquita.html
+++ b/Cuando Juega Boquita.html
@@ -85,7 +85,7 @@
           <div class="container-rival">
             <span class="tournament">Liga Argentina </span>
             <span class="rival"
-              >vs Union
+              >vs Union (Sta Fe)
               <img src="./images/union.png" class="logovs" />
             </span>
           </div>
