--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="./images/icon_192x192.png" />
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Cuando Juega Boquita</title>
+  <title>Cuando viajamos amort</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
